# skills

./: .gitignore  AGENTS.md  LICENSE  README.md
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.codex-plugin/: plugin.json
.github/: dependabot.yml
.github/workflows/: copier-drift.yml  release.yml
skills/ask-clarifying-questions/: SKILL.md
skills/fly-io/: SKILL.md
skills/fly-io/references/: data-storage.md  deploy-config.md  networking.md  production.md
skills/google-analytics/: .copier-answers.yml  SKILL.md  pyproject.toml
skills/google-analytics/references/: admin-api.md  data-api.md  playbook.md  setup.md
skills/google-analytics/src/ga4/: __init__.py  __main__.py  access_bindings.py  accounts.py  annotations.py  audiences.py  auth.py  cli.py  client.py  common.py  config.py  custom_dimensions.py  custom_metrics.py  data.py  data_streams.py  doctor.py  doctor_helpers.py  key_events.py  links.py  measurement_secrets.py  mp.py  properties.py
skills/google-drive/: .copier-answers.yml  .gitignore  SKILL.md  pyproject.toml
skills/google-drive/references/: setup.md
skills/google-drive/src/gdrive/: __init__.py  __main__.py  auth.py  cli.py  common.py  config.py  cp.py  doctor.py  doctor_helpers.py  link.py  ls.py  manifest.py  mkdir.py  mv.py  open.py  pull.py  push.py  rclone.py  rm.py  search.py  share.py  status.py  untrack.py
skills/google-search-console/: .copier-answers.yml  SKILL.md  pyproject.toml
skills/google-search-console/references/: seo-playbook.md  setup.md
skills/google-search-console/src/gsc/: __init__.py  __main__.py  analytics.py  auth.py  cli.py  client.py  common.py  config.py  inspect_url.py  pagespeed.py  sitemaps.py  sites.py
skills/harness-engineering/: SKILL.md
skills/harness-engineering/references/: transcript-build-hour.md  transcript-interview.md
skills/humanize/: README.md  SKILL.md
skills/humanize/references/: personality-and-soul.md
skills/node-26/: SKILL.md
skills/node-26/agents/: openai.yaml
skills/node-26/references/: node-26-upgrade-guide.md
skills/pdf/: SKILL.md
skills/pdf/scripts/: decrypt_template.py  fill_acroform.py  fill_overlay.py  inspect_pdf.py  markdown_to_pdf.py  render_redlines.py  verify_render.py
skills/pr-video-receipts/: SKILL.md
skills/tailscale/: SKILL.md
skills/tailscale/references/: automation-containers.md  expose-services.md  kubernetes.md  policy-security.md  production-diagnostics.md  routing-connectors.md
template/: AGENTS.md  SKILL.md  copier.yml  {{ _copier_conf.answers_file }}.jinja
template/bootstraps/: ga4.yml  gdrive.yml  gsc.yml
template/src/{{ pkg }}/: __init__.py.jinja  __main__.py.jinja  auth.py.jinja  common.py.jinja  {{ 'auth.py' if uses_oauth else '.copier-skip-auth.py' }}.jinja  {{ 'doctor_helpers.py' if has_doctor else '.copier-skip-doctor_helpers.py' }}.jinja
