[project]
name = "gdrive"
version = "0.1.0"
description = "Google Drive CLI wrapping rclone with manifest-tracked push/pull workflows"
requires-python = ">=3.12"
dependencies = ["click>=8.1"]

[project.scripts]
gdrive = "gdrive.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gdrive"]

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ty.environment]
root = ["./src"]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]
